<resources>
    <string name="app_name">LaundryKu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us with using app LaundryKu and \nThis App is a laundry service app</string>
    <string name="move_to_register_page">Dont have account? Create Account</string>
    <string name="move_to_forgot_password_page">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="forgot_password_tag">Forgot Password, you can reset it with send to your email</string>
    <string name="forgot_password_send">Send</string>
    <string name="tv_forgot_password">Forgot Password</string>

    <string name="move_to_login_page">Have account?Sign In</string>


    <string name="no_hp">No HP dari User</string>



    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_message">Message</string>
    <string name="menu_incoming">Incoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version_app">version 1.0</string>
    <string name="recommended">Recommended</string>
    <string name="more">More</string>
    <string name="dry_cleaning">Dry Cleaning</string>
    <string name="wash_and_iron"><![CDATA[Wash & Iron]]></string>
    <string name="wash_only">Wash</string>
    <string name="ironing">Ironing</string>
    <string name="choose_services">Choose Services</string>

    <string name="promo_cashback"><![CDATA[Promo & Cashback]]></string>
</resources>